--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
   <title> Parjanya's Personal Website</title>
 </head>
 
+<style>
+    body
+    {
+      background-color: #EAf6F6;
+    }
+    hr
+    {
+      background-color: white;
+      border-style: none;
+      border-color: grey;
+      border-width: 5px;
+      border-top-style: dotted;
+      width: 4%;
+    }
+
+</style>
 <body>
   <table cellspacing="20">
     <td><img src="PAR_0113-2.jpg" alt="Parjanya's Profile Picture"></td>
